<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StdRegActivity">

    <TextView
        android:id="@+id/reg"
        android:layout_width="187dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="622dp"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:hint="@string/name" />


    <EditText
        android:id="@+id/admission"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:hint="@string/adm" />

    <EditText
        android:id="@+id/email"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admission"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:background="@drawable/btn_shape"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="bold" />


</RelativeLayout>