<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminRegActivity"
    android:background="@drawable/cut_card">


    <TextView
        android:id="@+id/reg"
        android:layout_width="193dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edt_shape"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg" />

    <EditText
        android:id="@+id/admission"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_below="@+id/name"
        android:autofillHints="name"
        android:inputType="text"
        android:layout_marginTop="80dp"
        android:background="@drawable/edt_shape"
        android:hint="@string/adm"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginTop="36dp"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admission" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_below="@+id/password"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="10dp"
        android:hint="@string/pass"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.128" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="247dp"
        android:layout_height="32dp"
        android:layout_below="@+id/confirm"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:text="@string/alreadyHave"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />



</androidx.constraintlayout.widget.ConstraintLayout>