<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_login"
    android:background="@drawable/cut_card">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="630dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="217dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:ellipsize="start"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="307dp"
        android:autofillHints="password"
        android:background="@drawable/edt_shape"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:ellipsize="start"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtForget"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="29dp"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/back_to_reg"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="77dp"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>