<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kca_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admin_btn"
        android:layout_width="304dp"
        android:layout_height="62dp"
        android:background="@drawable/btn_shape"
        android:backgroundTint="@color/blue"
        android:text="@string/admin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/student_btn"
        android:layout_width="304dp"
        android:layout_height="62dp"
        android:background="@drawable/btn_shape"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:text="@string/std"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />


</androidx.constraintlayout.widget.ConstraintLayout>